--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /.idea/
 /docs/tests/einsendeaufgaben1/se1#_suckow-homberg.pdf
 /docs/tests/einsendeaufgaben1/SE1_Deckblatt.pdf
+/docs/tests/einsendeaufgaben2/SE2_Aufgaben.pdf
+/docs/tests/einsendeaufgaben2/SE2_Deckblatt.pdf
+/docs/tests/einsendeaufgaben2/se2#_suckow-homberg.pdf
