chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /docs/tests/einsendeaufgaben2/SE2_Aufgaben.pdf
 /docs/tests/einsendeaufgaben2/SE2_Deckblatt.pdf
 /docs/tests/einsendeaufgaben2/se2#_suckow-homberg.pdf
+/src/
