chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /docs/tests/einsendeaufgaben2/SE2_Deckblatt.pdf
 /docs/tests/einsendeaufgaben2/se2#_suckow-homberg.pdf
 /src/
+/docs/tests/einsendeaufgaben 3/SE3_Aufgaben.pdf
+/docs/tests/einsendeaufgaben 3/SE3_Deckblatt.pdf
