chore: initial commit for Einsendeaufgaben 4

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /src/
 /docs/tests/einsendeaufgaben 3/SE3_Aufgaben.pdf
 /docs/tests/einsendeaufgaben 3/SE3_Deckblatt.pdf
+/docs/tests/einsendeaufgaben 4/SE4_Deckblatt.pdf
+/docs/tests/einsendeaufgaben 4/SE4_Aufgaben.pdf
